# dating-site

./: .gitignore  .pre-commit-config.yaml  Makefile  README.rst  data_for_testing.json  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
dating_site/: settings.py  urls.py  wsgi.py
dating_site/templates/: base.html
my_tinder/: admin.py  apps.py  forms.py  models.py  permissions.py  put_watermark.py  routers.py  serializers.py  urls.py  views.py
my_tinder/migrations/: 0001_initial.py  0002_alter_customuser_first_name_and_more.py  0002_likedusers_customuser_like_alter_customuser_email_and_more.py  0003_alter_customuser_like.py  0003_alter_customuser_options_alter_customuser_avatar_and_more.py  0004_alter_customuser_first_name_and_more.py  0004_alter_customuser_like.py  0005_customuser_latitude_customuser_longitude.py  0005_rename_like_customuser_likes.py  0006_customuser_location.py  0006_remove_customuser_likes.py  0007_alter_customuser_location.py  0007_likeduser_remove_customuser_liked_users_and_more.py  0008_remove_customuser_liked_user_customuser_liked_users_and_more.py  0009_alter_customuser_options_alter_customuser_gender.py  0010_alter_customuser_avatar_alter_customuser_email_and_more.py  0011_alter_customuser_gender.py  0012_alter_customuser_gender.py  0013_alter_customuser_options_alter_customuser_avatar_and_more.py  0014_remove_customuser_liked_users_customuser_liked_users.py  0015_customuser_unliked_users_alter_customuser_email_and_more.py
my_tinder/my_tinder_services/: put_watermark.py  put_watermarl.py
my_tinder/static/my_tinder/js/: main.js
my_tinder/templates/my_tinder/: client_page.html  clients_page.html  create_client.html  index.html  login_page.html  other_client_page.html  registration.html
my_tinder/templatetags/: verbose_names.py
my_tinder/tests/: conftest.py  test_views.py
templates/: base.html
