[tool.poetry]
name = "dating_site"
version = "0.1.0"
description = ""
authors = ["Sergey_Sharay <sergeysharay1987@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"
Pillow = "^9.0.1"
numpy = "^1.22.3"
djangorestframework = "^3.13.1"
pytest = "^7.1.2"
pytest-django = "^4.5.2"
django-filter = "^22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
